--- a/KatlaSport.DataAccess/KatlaSport.DataAccess.csproj
+++ b/KatlaSport.DataAccess/KatlaSport.DataAccess.csproj
@@ -69,6 +69,10 @@
     <Compile Include="Migrations\201811141308415_AddCategoryDescription.Designer.cs">
       <DependentUpon>201811141308415_AddCategoryDescription.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201811150803587_AddProductDescriptionManCodePrice.cs" />
+    <Compile Include="Migrations\201811150803587_AddProductDescriptionManCodePrice.Designer.cs">
+      <DependentUpon>201811150803587_AddProductDescriptionManCodePrice.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -86,6 +90,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201811141308415_AddCategoryDescription.resx">
       <DependentUpon>201811141308415_AddCategoryDescription.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201811150803587_AddProductDescriptionManCodePrice.resx">
+      <DependentUpon>201811150803587_AddProductDescriptionManCodePrice.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
